; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_msi.c_get_version_info.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_msi.c_get_version_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c"\\\00", align 1
@MAX_PATH = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"%d.%d.%d.%d\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"\\VarFileInfo\\Translation\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*, i32*, i32*)* @get_version_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_version_info(i32 %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_2__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @GetFileVersionInfoSizeA(i32 %15, i32* null)
  store i32 %16, i32* %13, align 4
  %17 = call i32 (...) @GetProcessHeap()
  %18 = load i32, i32* %13, align 4
  %19 = call i32 @HeapAlloc(i32 %17, i32 0, i32 %18)
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %13, align 4
  %22 = load i32, i32* %11, align 4
  %23 = call i32 @GetFileVersionInfoA(i32 %20, i32 0, i32 %21, i32 %22)
  %24 = load i32, i32* %11, align 4
  %25 = bitcast %struct.TYPE_2__** %12 to i8**
  %26 = call i32 @VerQueryValueA(i32 %24, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %25, i32* %13)
  %27 = call i32 (...) @GetProcessHeap()
  %28 = load i32, i32* @MAX_PATH, align 4
  %29 = call i32 @HeapAlloc(i32 %27, i32 0, i32 %28)
  %30 = load i32*, i32** %7, align 8
  store i32 %29, i32* %30, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @HIWORD(i32 %35)
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @LOWORD(i32 %39)
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @HIWORD(i32 %43)
  %45 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @LOWORD(i32 %47)
  %49 = call i32 (i32, i8*, i32, ...) @sprintf(i32 %32, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %36, i32 %40, i32 %44, i32 %48)
  %50 = load i32*, i32** %7, align 8
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @lstrlenA(i32 %51)
  %53 = load i32*, i32** %8, align 8
  store i32 %52, i32* %53, align 4
  %54 = load i32, i32* %11, align 4
  %55 = bitcast i32** %14 to i8**
  %56 = call i32 @VerQueryValueA(i32 %54, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i8** %55, i32* %13)
  %57 = call i32 (...) @GetProcessHeap()
  %58 = load i32, i32* @MAX_PATH, align 4
  %59 = call i32 @HeapAlloc(i32 %57, i32 0, i32 %58)
  %60 = load i32*, i32** %9, align 8
  store i32 %59, i32* %60, align 4
  %61 = load i32*, i32** %9, align 8
  %62 = load i32, i32* %61, align 4
  %63 = load i32*, i32** %14, align 8
  %64 = load i32, i32* %63, align 4
  %65 = call i32 (i32, i8*, i32, ...) @sprintf(i32 %62, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i32 %64)
  %66 = load i32*, i32** %9, align 8
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @lstrlenA(i32 %67)
  %69 = load i32*, i32** %10, align 8
  store i32 %68, i32* %69, align 4
  %70 = call i32 (...) @GetProcessHeap()
  %71 = load i32, i32* %11, align 4
  %72 = call i32 @HeapFree(i32 %70, i32 0, i32 %71)
  ret void
}

declare dso_local i32 @GetFileVersionInfoSizeA(i32, i32*) #1

declare dso_local i32 @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @GetFileVersionInfoA(i32, i32, i32, i32) #1

declare dso_local i32 @VerQueryValueA(i32, i8*, i8**, i32*) #1

declare dso_local i32 @sprintf(i32, i8*, i32, ...) #1

declare dso_local i32 @HIWORD(i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i32 @lstrlenA(i32) #1

declare dso_local i32 @HeapFree(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
